--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@shopify/app": "3.56.1",
-    "@shopify/cli": "3.56.1"
+    "@shopify/cli": "3.56.1",
+    "express": "^4.18.2"
   },
   "trustedDependencies": [
     "@shopify/plugin-cloudflare"
