--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@shopify/app": "3.56.1",
     "@shopify/cli": "3.56.1",
-    "express": "^4.18.2"
+    "dotenv": "^16.4.4",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   },
   "trustedDependencies": [
     "@shopify/plugin-cloudflare"
