--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@shopify/app": "3.56.1",
     "@shopify/cli": "3.56.1",
+    "axios": "^1.6.7",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2"
