--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@shopify/app": "3.56.1",
     "@shopify/cli": "3.56.1",
     "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2"
