--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@shopify/app": "3.56.1",
     "@shopify/cli": "3.56.1",
+    "@shopify/shopify-api": "^9.3.1",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.4",
