--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "sanitize-html": "^2.11.0"
   },
   "trustedDependencies": [
     "@shopify/plugin-cloudflare"
