--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "node-fetch": "^3.3.2",
     "sanitize-html": "^2.11.0"
   },
